# opendwg

./: .gitignore  .gitmodules  CLAUDE.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/june690602_blip/cleancad/: ExampleInstrumentedTest.kt  (+2 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dwg_serialize.c  dwg_serialize.h  dwgjni.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_settings.xml  activity_viewer.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: privacy.html
docs/store/: RELEASE-GUIDE.md  listing.md
docs/superpowers/handoff/: 2026-05-27-phase8-resume.md  2026-05-28-phase8.7-resume.md  2026-05-28-phase8.8-resume.md  2026-05-29-phase9.2-anr-and-rendering.md  2026-05-29-phase9.3-paper-space-layouts.md  2026-05-30-phase10-render-performance.md  2026-05-30-phase9.4-xclip-spatial-filter.md
docs/superpowers/plans/: 2026-05-25-phase2-libredwg-ndk.md  2026-05-26-phase3-dxf-parser.md  2026-05-26-phase4-renderer.md  2026-05-26-phase5-polish.md  2026-05-27-phase6-plan.md  2026-05-27-phase7-rendering-quality.md  2026-05-27-phase8-libredwg-native.md
docs/superpowers/specs/: 2026-05-25-cleancad-viewer-design.md  2026-05-26-phase5-polish.md  2026-05-27-phase6-rendering-and-release.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
